[workspace]
members = [
    "crates/yinx-core",
    "crates/yinx-http",
    "crates/yinx-workflow",
    "crates/yinx-storage",
    "crates/yinx-import",
    "crates/yinx-tui",
    "crates/yinx-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "cookies", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
bytes = "1"
parking_lot = "0.12"
base64 = "0.22"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1

[package]
name = "yinx"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yinx"
path = "src/main.rs"

[dependencies]
yinx-core = { path = "crates/yinx-core" }
yinx-http = { path = "crates/yinx-http" }
yinx-tui = { path = "crates/yinx-tui" }
yinx-cli = { path = "crates/yinx-cli" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
yinx-core = { path = "crates/yinx-core" }
yinx-http = { path = "crates/yinx-http" }
yinx-workflow = { path = "crates/yinx-workflow" }
yinx-storage = { path = "crates/yinx-storage" }
yinx-import = { path = "crates/yinx-import" }
tokio = { workspace = true }
