[package]
name = "yinx-cli"
version.workspace = true
edition.workspace = true

[dependencies]
yinx-core = { path = "../yinx-core" }
yinx-http = { path = "../yinx-http" }
yinx-workflow = { path = "../yinx-workflow" }
yinx-import = { path = "../yinx-import" }
yinx-tui = { path = "../yinx-tui" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
