[package]
name = "yinx-storage"
version.workspace = true
edition.workspace = true

[dependencies]
yinx-core = { path = "../yinx-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
