[package]
name = "yinx-tui"
version.workspace = true
edition.workspace = true

[dependencies]
yinx-core = { path = "../yinx-core" }
yinx-http = { path = "../yinx-http" }
yinx-import = { path = "../yinx-import" }
yinx-storage = { path = "../yinx-storage" }
yinx-workflow = { path = "../yinx-workflow" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
